# DAMASK.utils

./: .gitignore  .gitmodules  Fortran.yml  LICENSE  NeuralOperatorUrls.txt  README.md  anhvt89@192.168.1.120  autoCancel.sh  autoCompileDamask.py  autoPlotMs3d.sh  autoSubmit.sh  build-damask-3.sh  build-damask.sh  cleanseGeom.py  cleanup.sh  computeYieldStress.py  computeYoungModulus.py  damask-3.0.0-alpha2.tar.xz  damask-3.0.0-alpha4.tar.xz.sha256  damask-3.0.0-alpha5.tar.xz.sha256  dump2npy.py  dumpMises.py  geom2npy.py  geom2png.py  geom_spk2npy.py  getCrystalTexture.py  getNumProcessors.py  interp3d.py  note.txt  npy2geom.py  npy2png.py  pep8_convert.sh  plotMs2d.py  plotMs3dMulti.py  plotMs3dSingle.py  plotQoI.py  plotStress3d.py  plotStress3dDeformedGeom.py  plotStressStrain.py  plotms2d.py  (+13 more)
100sves-32x32x32/: plotStressStrain.py
100sves-64x64x64/: plotStressStrain.py
ConfigFiles-2.0.2/: Phase_Dislotwin_Tungsten.config  Phase_Dislotwin_alphaBrass.config  Phase_Phenopowerlaw_Copper.config  Phase_Phenopowerlaw_Nickel.config  Phase_Phenopowerlaw_SS304L.config  Phase_Phenopowerlaw_Tantalum.config
ConfigFiles-3.0.0-alpha4/: config.tar.xz
DAMASK-2.0.2/: CHANGESET
DREAM.3D/: Al7075_cubic_texture_equiaxed_grains.dream3d  Alpha_Ti_basal_transverse.dream3d  README.md  generateMsDream3d.sh  material.config  single_phase_equiaxed_12x12x12.geom  single_phase_equiaxed_18x18x18.geom  single_phase_equiaxed_24x24x24.geom  single_phase_equiaxed_32x32x32.geom  single_phase_equiaxed_32x32x32.vtr  single_phase_equiaxed_36x36x36.geom  single_phase_equiaxed_48x48x48.geom  single_phase_equiaxed_60x60x60.geom  single_phase_equiaxed_64x64x64.geom  single_phase_equiaxed_64x64x64.vtr  single_phase_equiaxed_72x72x72.geom  test-DownSamplingSVEs-ideapad320-NonExact-base320.json  test-DownSamplingSVEs-ideapad320-NonExact-base72.json  test-DownSamplingSVEs-ideapad320-NonExact.json  test-DownSamplingSVEs-ideapad320.json  test-DownSamplingSVEs-ideapad320Test.json  test-DownSamplingSVEs-solo.json  test-DownSamplingSVEs.json  test-adoptSingleCubicPhaseEquiaxed-DAMASK.json
MTEX/: .gitignore
MultilevelEstimators.jl-extras/: Example.jl  README.md  Sandwich.py
damask-2.0.2/: DAMASK_prerequisites.sh  README
damask-2.0.3/: CHANGESET  DAMASK_prerequisites.sh  README
damask-3.0.0/: README.md
damask-3.0.0-alpha/: CHANGESET  DAMASK_prerequisites.sh  README
damask-3.0.0-alpha2/: CHANGESET  README
damask-3.0.0-alpha3/: CHANGESET  DAMASK_prerequisites.sh  README
damask-3.0.0-alpha4/: CHANGESET  README
damask-3.0.0-alpha5/: CHANGESET  DAMASK_prerequisites.sh
damask-3.0.0-alpha6/: DAMASK_prerequisites.sh
damask-3.0.0-alpha7/: DAMASK_prerequisites.sh
damask-3.0.0-beta/: DAMASK_prerequisites.sh
damask-releases/: damask-3.0.0-alpha3.tar.xz  damask-3.0.0-beta.tar.xz  damask-3.0.0-beta2.tar.xz  damask-3.0.0.tar.xz  pre-processing.tar.xz
experiment-datasets/: constv-model-calib-datasets
functional-unit-test/: sbatch.damask.solo
mlmc-mimc/: run_multiindex_multiple_qoi.jl  run_multilevel.jl  wrapper-DREAM3D-DAMASK.py
plot_fractional_cost/: history2costfrac.jl  mimc_frac_cost.txt  mlmc_frac_cost.txt  plot.ipynb  plot.py  test_MLMC_runs_s1057681_alphaTitanium.jld2
seasons-greetings_2021/: material.yaml  post-process.py  pre-process.py  tensionX.yaml
test-2D-poly-crystalline-Aluminum/: README.md  material.config  nohup.out
testCBayes-Damask-Phase_Dislotwin_TWIP-Steel-FeMnC-64x64x64/: README.md  buildMaterialConfig.sh  computeGrainSize.py  computeYieldStress.py  computeYoungModulus.py  createFolder.sh  material.config.preamble  readOutput.sh  sbatch.damask.solo  tension.load  test-adoptSingleCubicPhaseEquiaxed-DAMASK.json  test2.sh
testCBayes-Damask-Phase_Phenopowerlaw_Aluminum/: README  autoSubmit.sh  computeYoungModulus.py  plotQoI.py  sbatch.damask.solo  test.sh
test_20x20x20/: material.config
test_CBayes_Phenopowerlaw_Aluminum/: README  createFolder.sh  tension.load  tmp.txt
test_CBayes_tensileDogbone/: README.md  findGaugeLocations.py  gaugeFilter.txt  geom_cad2phase.py  geom_fromTable.py  geom_spk2dmsk.py  geom_spk2spk.py  geom_toTable.py  insertedVoid_test.npy  insertedVoid_test.vtr  m_dump_12_out.npy  makeMicrostructures.sh  material.config  material.config.preamble  numerics.config  padAirPolycrystals.py  padded_spk_dump_12_out.vti  padded_spk_dump_12_out.vtr  test.sh  (+11 more)
triangle/Triangle/: .hg_archival.txt  bootstrap  configure.in  configure.py  make.py  makefile
triangle/Triangle/config/: aclocal.m4
triangle/Triangle/src/: Makefile.am  triangle.c
(+36126 files in other folders)
